--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,7 @@ org.jetbrains.compose.experimental.uikit.enabled=true
 kotlin.native.cacheKind=none
 
 android.ndkVersion=27.0.12077973
+
+# 16KB Page Size Support, NDK r27: Enable flexible page size support for Android 15+ devices
+android.native.buildOutput=verbose
+android.native.useNativeCompilerSettingsCache=false
