Enforce deterministic builds on F-Droid

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,14 @@ android.ndkVersion=27.0.12077973
 # 16KB Page Size Support, NDK r27: Enable flexible page size support for Android 15+ devices
 android.native.buildOutput=verbose
 android.native.useNativeCompilerSettingsCache=false
+
+# FOR REPRODUCIBLE BUILDS
+kotlin.native.binary.reproducible=true
+kotlin.native.distribution.downloadFromMaven=true
+
+# Compose compiler consistency
+androidx.compose.compiler.reportsDestination=build/compose_reports
+androidx.compose.compiler.metricsDestination=build/compose_metrics
+
+# Source timestamp for reproducible builds
+SOURCE_DATE_EPOCH=1640995200
