--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 #Gradle
-org.gradle.jvmargs=-Xmx4048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx4048M"
+kotlin.collections.hash.seed=0
+org.gradle.jvmargs=-Xmx4048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx4048M" -Dkotlin.collections.hash.seed=0
 
 #Kotlin
 kotlin.code.style=official
@@ -31,3 +32,6 @@ androidx.compose.compiler.metricsDestination=build/compose_metrics
 
 # Source timestamp for reproducible builds
 SOURCE_DATE_EPOCH=1640995200
+
+# Force deterministic builds
+kotlin.mpp.stability.nowarn=true
