Force deterministic builds with gradle settings

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,5 @@
 #Gradle
-kotlin.collections.hash.seed=0
-org.gradle.jvmargs=-Xmx4048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx4048M" -Dkotlin.collections.hash.seed=0
+org.gradle.jvmargs=-Xmx4048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx4048M" -XX:+UseSerialGC -Dkotlin.compiler.preciseCompilationResultsBackup=true
 
 #Kotlin
 kotlin.code.style=official
@@ -34,4 +33,9 @@ androidx.compose.compiler.metricsDestination=build/compose_metrics
 SOURCE_DATE_EPOCH=1640995200
 
 # Force deterministic builds
+kotlin.collections.hash.seed=0
 kotlin.mpp.stability.nowarn=true
+kotlin.compiler.execution.strategy=in-process
+kotlin.daemon.useFallbackStrategy=false
+kotlin.incremental=false
+org.gradle.parallel=false
