Set Kotlin incremental to false

--- a/gradle.properties
+++ b/gradle.properties
@@ -39,3 +39,4 @@ kotlin.compiler.execution.strategy=in-process
 kotlin.daemon.useFallbackStrategy=false
 kotlin.incremental=false
 org.gradle.parallel=false
+kotlin.incremental.multiplatform=false
